@@ -1,13 +1,12 @@
+
 Build.PL
 Changes
-MANIFEST
-Makefile.PL
-README
-
 inc/Test/Run/Builder.pm
-
 lib/Config/IniFiles.pm
-
+Makefile.PL
+MANIFEST
+META.yml
+README
 t/00load.t
 t/01basic.t
 t/02weird.t
@@ -22,13 +21,13 @@ t/10delta.t
 t/11copy-ties-with-array-vals.t
 t/12open-empty-file.t
 t/13val-in-list-context.t
-
+t/14brackets-within-values.t
 t/array.ini
+t/bad.ini
+t/blank.ini
+t/brackets-in-values.ini
 t/ca.ini
+t/cmt.ini
 t/en.ini
 t/es.ini
 t/test.ini
-t/cmt.ini
-t/bad.ini
-t/blank.ini
-META.yml
