@@ -1,0 +1,2 @@
+[SiteName]
+file=http://www.example.com/files/file[1-22].gz
